// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KCard has hover class when passed 1`] = `
<section aria-describedby="test-content-id-1234" class="kong-card border hover">
  <!---->
  <div class="k-card-content d-flex">
    <div id="test-content-id-1234" class="k-card-body"></div>
    <!---->
  </div>
</section>
`;

exports[`KCard has shadow class when passed 1`] = `
<section aria-describedby="test-content-id-1234" class="kong-card border kcard-shadow">
  <!---->
  <div class="k-card-content d-flex">
    <div id="test-content-id-1234" class="k-card-body"></div>
    <!---->
  </div>
</section>
`;

exports[`KCard matches snapshot 1`] = `
<section aria-describedby="test-content-id-1234" class="kong-card border">
  <!---->
  <div class="k-card-content d-flex">
    <div id="test-content-id-1234" class="k-card-body"></div>
    <!---->
  </div>
</section>
`;

exports[`KCard renders proper content when using props 1`] = `
<section aria-label="Card Title" aria-describedby="test-content-id-1234" class="kong-card border">
  <div class="k-card-header d-flex mb-4 has-status">
    <div>
      <div class="k-card-status-hat mb-4">Card Status</div>
      <div class="k-card-title">
        <h4>Card Title</h4>
      </div>
    </div>
    <div class="k-card-actions"></div>
  </div>
  <div class="k-card-content d-flex">
    <div id="test-content-id-1234" class="k-card-body">Card Body</div>
    <!---->
  </div>
</section>
`;

exports[`KCard renders slots when passed 1`] = `
<section aria-labelledby="test-title-id-1234" aria-describedby="test-content-id-1234" class="kong-card border">
  <div class="k-card-header d-flex mb-4 has-status">
    <div>
      <div class="k-card-status-hat mb-4"><span>Card Status Hat</span></div>
      <div id="test-title-id-1234" class="k-card-title">
        <h4><span>Card Title</span></h4>
      </div>
    </div>
    <div class="k-card-actions"><span>Card Actions</span></div>
  </div>
  <div class="k-card-content d-flex">
    <div id="test-content-id-1234" class="k-card-body">
      <div>Card Body</div>
    </div>
    <div class="k-card-notifications ml-3"><span>Card Notifications</span></div>
  </div>
</section>
`;
